nginx-ingress-resource/ingress-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-canary
  labels:
    app: app-canary
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: app.com
      http:
        paths:
          - backend:
              serviceName: app-canary
              servicePort: 80
            path: /
